manifests/multi-cluster-lb/destination-rule-cluster-a-gateway-ns.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: gemma-cluster-a-tls
  namespace: openshift-ingress
  labels:
    app.kubernetes.io/part-of: multi-cluster-lb
spec:
  host: aed794ce602fc4585aff1f0ab80130b1-1131672273.us-east-2.elb.amazonaws.com
  trafficPolicy:
    tls:
      mode: SIMPLE
      insecureSkipVerify: true
