manifests/multi-cluster-lb/destination-rule-gateway-ns.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  labels:
    app.kubernetes.io/part-of: multi-cluster-lb
  name: gemma-cluster3-tls
  namespace: openshift-ingress
spec:
  host: gemma2-9b-fp8-direct-models-as-a-service.apps.cluster-bf44z.bf44z.sandbox2582.opentlc.com
  trafficPolicy:
    connectionPool:
      http:
        h2UpgradePolicy: DO_NOT_UPGRADE
    tls:
      mode: SIMPLE
      insecureSkipVerify: true
      sni: gemma2-9b-fp8-direct-models-as-a-service.apps.cluster-bf44z.bf44z.sandbox2582.opentlc.com
