manifests/multi-cluster-lb/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/part-of: multi-cluster-lb
  name: gemma-multi-cluster-route
  namespace: models-as-a-service
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: maas-default-gateway
    namespace: openshift-ingress
  rules:
  - backendRefs:
    - group: ''
      kind: Service
      name: gemma2-9b-fp8-kserve-workload-svc
      port: 8000
      weight: 50
    - group: ''
      kind: Service
      name: gemma2-9b-fp8-cluster3
      port: 443
      weight: 50
    filters:
    - type: URLRewrite
      urlRewrite:
        hostname: REPLACE_WITH_CLUSTER3_ROUTE_HOSTNAME
        path:
          replacePrefixMatch: /v1/completions
          type: ReplacePrefixMatch
    matches:
    - path:
        type: PathPrefix
        value: /multi-cluster/gemma2-9b-fp8/v1/completions
  - backendRefs:
    - group: ''
      kind: Service
      name: gemma2-9b-fp8-kserve-workload-svc
      port: 8000
      weight: 50
    - group: ''
      kind: Service
      name: gemma2-9b-fp8-cluster3
      port: 443
      weight: 50
    filters:
    - type: URLRewrite
      urlRewrite:
        hostname: REPLACE_WITH_CLUSTER3_ROUTE_HOSTNAME
        path:
          replacePrefixMatch: /v1/chat/completions
          type: ReplacePrefixMatch
    matches:
    - path:
        type: PathPrefix
        value: /multi-cluster/gemma2-9b-fp8/v1/chat/completions
  - backendRefs:
    - group: ''
      kind: Service
      name: gemma2-9b-fp8-kserve-workload-svc
      port: 8000
      weight: 50
    - group: ''
      kind: Service
      name: gemma2-9b-fp8-cluster3
      port: 443
      weight: 50
    filters:
    - type: URLRewrite
      urlRewrite:
        hostname: REPLACE_WITH_CLUSTER3_ROUTE_HOSTNAME
        path:
          replacePrefixMatch: /v1/models
          type: ReplacePrefixMatch
    matches:
    - path:
        type: PathPrefix
        value: /multi-cluster/gemma2-9b-fp8/v1/models
  - backendRefs:
    - group: ''
      kind: Service
      name: gemma2-9b-fp8-kserve-workload-svc
      port: 8000
      weight: 50
    - group: ''
      kind: Service
      name: gemma2-9b-fp8-cluster3
      port: 443
      weight: 50
    filters:
    - type: URLRewrite
      urlRewrite:
        hostname: REPLACE_WITH_CLUSTER3_ROUTE_HOSTNAME
        path:
          replacePrefixMatch: /
          type: ReplacePrefixMatch
    matches:
    - path:
        type: PathPrefix
        value: /multi-cluster/gemma2-9b-fp8
