manifests/multi-cluster-lb/service-entry-gateway-ns.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: '{"apiVersion":"networking.istio.io/v1","kind":"ServiceEntry","metadata":{"annotations":{},"labels":{"app.kubernetes.io/part-of":"multi-cluster-lb"},"name":"gemma-cluster3-vllm","namespace":"openshift-ingress"},"spec":{"hosts":["a41cf615615014b66bf7d3ccbace4de3-926113304.us-east-2.elb.amazonaws.com"],"location":"MESH_EXTERNAL","ports":[{"name":"https","number":443,"protocol":"HTTPS"}],"resolution":"DNS"}}

      '
  labels:
    app.kubernetes.io/part-of: multi-cluster-lb
  name: gemma-cluster3-vllm
  namespace: openshift-ingress
spec:
  hosts:
  - a41cf615615014b66bf7d3ccbace4de3-926113304.us-east-2.elb.amazonaws.com
  location: MESH_EXTERNAL
  ports:
  - name: https
    number: 443
    protocol: HTTPS
  resolution: DNS
