manifests/multi-cluster-lb/service-entry.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  labels:
    app.kubernetes.io/instance: maas-demo-gateway
    app.kubernetes.io/part-of: multi-cluster-lb
  name: gemma-cluster3-vllm
  namespace: models-as-a-service
spec:
  hosts:
  - gemma2-9b-fp8-direct-models-as-a-service.apps.cluster-bf44z.bf44z.sandbox2582.opentlc.com
  location: MESH_EXTERNAL
  ports:
  - name: https
    number: 443
    protocol: HTTPS
  resolution: DNS
